quartz/styles/custom.scss
/* ... */
// Ensure the point ends of arrows are the same color as the edges
[id$="flowchart-v2-pointEnd"] {
  fill: var(--midground-faint) !important;
}

// Edge labels  - TODO not working on safari
.edgeLabel > .label > foreignObject > div {
  background-color: transparent !important;
  padding: 0 !important;

  &:has(.edgeLabel:empty) {
    display: none !important;
    background-color: transparent !important;
  }
}

.flowchart-link {
  stroke: var(--midground-faint) !important;
}

foreignObject > div {
  display: block !important; // "table-cell" default is not centered
}

.edgeLabel > div,
.flowchart p,
.flowchart .katex,
foreignObject {
  overflow: visible !important;
}

.flowchart .nodeLabel,
.flowchart .label,
.flowchart .edgeLabel {
  & .katex {
    margin-left: 0.25em;
  }
}

.flowchart .katex {
  margin-left: 0.375em;
  margin-right: 0.375em;
}
/* stylelint-enable selector-class-pattern */

.manifold-embed {
  position: relative;
  width: 100%;
  height: 18rem;
  max-width: 35rem;
  border-radius: $border-radius;
}

.after-article-components {
  margin-bottom: calc(2 * $base-margin);
  margin-top: calc(2 * $base-margin);

  & p {
    margin-bottom: $base-margin; // Less separation than usual
  }
}

#subscription-and-contact {
  border-radius: $border-radius;
  border: 1px solid var(--midground);
  padding-bottom: 1rem;
  padding-left: 1rem;
  padding-right: 1rem;
  max-width: fit-content;
  margin-left: auto;
  margin-right: auto;
}

.centered {
  text-align: center;
}

iframe {
  border: none;
  width: 95%;
  border-radius: $border-radius;
  margin-top: calc(2 * $base-margin);
  margin-bottom: calc(2 * $base-margin);

  // Palform looks out of place in dark mode, so we invert it
  :root[data-theme="dark"] &[src*="palform.app"] {
    filter: invert(93%) hue-rotate(180deg);
  }
}

.right-arrow,
.monospace-arrow {
  vertical-align: bottom;
}

// EG ← looks better in FiraCode
.monospace-arrow {
  font-family: var(--font-monospace);
  color: var(--foreground);
}

// Specific graph in design doc has too much whitespace in light
:root[data-theme="light"] {
  .compression-ratio-graph {
    margin-bottom: -0.25rem;
  }
}

#emoji-comparison-figure {
  & div {
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
    justify-content: center;
    margin-bottom: 1rem;
  }

  & img {
    width: min(100px, 12vw);
    aspect-ratio: 1;
    object-fit: contain;
    margin: 0 auto;
  }

  & .subfigure {
    display: flex;
    flex-direction: column;
    flex: 1 0 calc(15%);
    align-items: center;
  }
}

.light-svg {
  :root[data-theme="light"] & {
    filter: invert(35%); // Lighten to match the text color
  }

  // Use a lighter color in dark mode
  :root[data-theme="dark"] & {
    filter: invert(75%);
  }
}

// These transparent images need a background color to have visible text
.transparent-image {
  :root[data-theme="dark"] & {
    background-color: var(--foreground);
  }
}

.mirix-subscript {
  vertical-align: calc(-0.25 * $base-margin);
  line-height: 100%; // Prevent the lines from being more spaced
}

figure#goose-terminal {
  line-height: 1.1rem;

  & pre > code > [data-line] {
    text-wrap: nowrap;
  }
}

pre,
figure#goose-terminal {
  // Ligatures can mess up spacing, esp in Firefox for "===" in FiraCode VF
  font-variant-ligatures: none;
}

